# droos_bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config.example.json  config.json.example  docker-compose.yml  lefthook.yaml  links_to_ids.py  mise.toml  pyproject.toml  renovate.json5  requirements.txt
droos_bot/: __init__.py  __main__.py  bot.py
droos_bot/db/: __init__.py  curd.py  session.py
droos_bot/db/models/: chat.py  lecture.py  series.py
droos_bot/gsheet/: spreadsheet.py
droos_bot/modules/: __init__.py  admin_files.py  broadcast.py  droos.py  feedback_and_files.py  files.py  restart.py  search.py  start.py  stats.py  update.py
droos_bot/utils/: analytics.py  commands.py  filters.py  keyboards.py  modules_loader.py  telegram.py
