[tool.poetry]
name = "droos-bot"
version = "0.3.0"
description = ""
authors = ["yshalsager <ysh-alsager@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^21.4"
python-telegram-bot-pagination = "^0.0.3"
gspread = "^5.12.4"
gspread-pandas = "^3.3.0"
SQLAlchemy = "^2.0.31"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]  # https://github.com/charliermarsh/ruff
fix = true
src = ["droos_bot"]
target-version = "py312"
line-length = 100

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"

[tool.ruff.lint]
select = ["A", "B", "BLE", "C4", "C90", "D", "DTZ", "E", "ERA", "F", "G", "I", "INP", "ISC", "N", "NPY", "PGH", "PIE", "PLC", "PLE", "PLR", "PLW", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "S", "SIM", "T10", "T20", "TID", "UP", "W", "YTT"]
ignore = ["E501", "S307", "RET504", "S101", "D211", "D213", "ERA001", "G004", "D100", "D101", "D102", "D103", "D104", "D105", "D104", "D107", "D203", "ISC001"]
unfixable = ["ERA001", "F401", "F841", "T201", "T203"]

[tool.mypy]
files = ["droos_bot"]
ignore_missing_imports = true
disallow_untyped_defs = true
#disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
