[project]
name = "droos-bot"
version = "1.0.0"
description = ""
authors = [
    { name = "yshalsager", email = "contact@yshalsager.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gspread>=5.12.4",
    "gspread-pandas>=3.3.0",
    "pyarabic>=0.6.15",
    "python-telegram-bot>=21.4",
    "SQLAlchemy>=2.0.31"
]

[dependency-groups]
dev = [
    "ruff>=0.8.1",
    "ty>=0.0.15",
    "jurigged>=0.6.0"
]

[tool.ruff]  # https://github.com/charliermarsh/ruff
fix = true
src = ["droos_bot"]
target-version = "py314"
line-length = 100

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"

[tool.ruff.lint]
select = ["A", "B", "BLE", "C4", "C90", "D", "DTZ", "E", "ERA", "F", "G", "I", "INP", "ISC", "N", "NPY", "PGH", "PIE", "PLC", "PLE", "PLR", "PLW", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "S", "SIM", "T10", "T20", "TID", "UP", "W", "YTT"]
ignore = ["E501", "S307", "RET504", "S101", "D211", "D213", "ERA001", "G004", "D100", "D101", "D102", "D103", "D104", "D105", "D104", "D107", "D203", "ISC001"]
unfixable = ["ERA001", "F401", "F841", "T201", "T203"]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
include = ["droos_bot"]

[tool.ty.rules]
unresolved-import = "ignore"
possibly-missing-attribute = "ignore"
